--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -43,7 +43,7 @@ p{
     border: 2px solid #000;
     border-radius: 8px;
             
-    width: 15rem;
+    width: 16rem;
     padding: 2rem 0.5rem;
 
     gap: 1rem;
@@ -55,7 +55,19 @@ p{
     justify-content: space-between;
     
 }
+/*---------------------- space-around -------------------*/
+.space-around .flexContainer{     
+    display: flex;
+    justify-content: space-around;
+    
+}
 
+/*---------------------- space-evenly -------------------*/
+.space-evenly .flexContainer{     
+    display: flex;
+    justify-content: space-evenly;
+    
+}
 
 /*---------------------- row-reverse -------------------*/
 .row-reverse .flexContainer{  
