--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -10,6 +10,7 @@ header{
 
 body{
     background: #824f9a;
+    
 }
 
 section{
@@ -18,7 +19,16 @@ section{
     align-items: flex-start;
     justify-content: center;
 
-    height: 10rem;   
+    margin-bottom: 3rem;   
+}
+
+hr{
+    width: 80%;
+    border: 2px solid white;
+    border-radius: 2px;
+
+    box-shadow:  2px 1px #f7941f;
+    -webkit-box-shadow: 2px 2px 4px #f7941f;
 }
 
 h1{
@@ -46,7 +56,7 @@ p{
     width: 16rem;
     padding: 2rem 0.5rem;
 
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 /*---------------------- space-between -------------------*/
@@ -61,11 +71,28 @@ p{
     justify-content: space-around;
     
 }
-
 /*---------------------- space-evenly -------------------*/
 .space-evenly .flexContainer{     
     display: flex;
     justify-content: space-evenly;
+    
+}
+/*---------------------- flex-start -------------------*/
+.flex-start .flexContainer{     
+    display: flex;
+    justify-content: flex-start;
+    
+}
+/*---------------------- flex-end -------------------*/
+.flex-end .flexContainer{     
+    display: flex;
+    justify-content: flex-end;
+    
+}
+/*---------------------- center -------------------*/
+.center .flexContainer{     
+    display: flex;
+    justify-content: center;
     
 }
 
@@ -73,15 +100,18 @@ p{
 .row-reverse .flexContainer{  
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;    
+    justify-content: space-between;   
+    
+    
 }
-
 /*---------------------- Column-reverse -------------------*/
 .Column-reverse .flexContainer{   
     display: flex;
     flex-direction: column-reverse;   
     align-items: center;    
 }
+
+
 
 .flexItem{
     background:#f7941f;
