--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -1,22 +1,32 @@
 *{
     margin: 0;
-    padding: 0;
-    
+    padding: 0;    
 }
 
 header{
-    height: 4rem;
+    display: flex;
+    justify-content: center;
+
+    background: white;
+    margin: 1.5rem;
 }
 
-body{
+header h1{
+    font-size: 3rem; 
+    color: #000;   
+}
+
+main{
     background: #824f9a;
-    
+    display: flex;
+    justify-content: space-evenly;    
+
+    padding-top: 2rem;
+    border-radius: 30px;
 }
 
 section{
-    display: flex;
-    
-    align-items: flex-start;
+    display: flex;    
     justify-content: center;
 
     margin-bottom: 3rem;   
@@ -36,8 +46,7 @@ h1{
     font-family: sans-serif;
     font-weight: bold;
     color: aliceblue;
-
-    margin-left: 3rem;
+   
     margin-bottom: 1rem;
 }
 
@@ -47,10 +56,19 @@ p{
     font-weight: bold;
     color: aliceblue;
 }
+
+.rightSection{
+    max-width: 50%;
+}
+
+.leftSection{
+    max-width: 50%;
+}
+
 .description{
-    color: rgb(224, 223, 223);
-    margin-left: 3rem;
-    margin-right: 1rem;
+    color: rgb(183, 183, 183);
+   
+    margin-right: 3rem;
     margin-top: -1rem;
     margin-bottom: 1rem;
 }
@@ -58,11 +76,10 @@ p{
     background:#995db5;
     border: 2px solid #000;
     border-radius: 8px;
-            
-    width: 16rem;    
+                
     padding: 0.5rem 0.5rem;
 
-    gap: 0.5rem;
+    gap: 1.5rem;
 }
 
 /*---------------------- space-between -------------------*/
