--- a/style.css
+++ b/style.css
@@ -21,9 +21,29 @@ main{
     display: flex;
     justify-content: space-evenly;    
 
-    padding-top: 2rem;
-    border-radius: 30px;
+    padding-top: 2rem;   
+    padding-bottom: 3rem; 
+    border-radius: 35px 35px 0px 0px;
+
 }
+
+.flexItens-Properties {
+    display: flex;
+    margin-top: -2rem;
+    padding-bottom: 1rem;
+    background:white;
+
+    border-radius: 35px 35px 0px 0px;;
+}
+
+.flexItens-Properties h1{
+    color: #000;
+} 
+
+.flexItens-Properties hr{
+    border: 2px solid #824f9a;
+    border-radius: 2px;
+} 
 
 section{
     display: flex;    
@@ -45,9 +65,12 @@ h1{
     font-size:x-large;
     font-family: sans-serif;
     font-weight: bold;
-    color: aliceblue;
-   
+    color: aliceblue;    
     margin-bottom: 1rem;
+}
+
+.rightSection h1{
+    margin-left: 2rem;
 }
 
 p{
@@ -72,6 +95,7 @@ p{
     margin-top: -1rem;
     margin-bottom: 1rem;
 }
+
 .flexContainer{
     background:#995db5;
     border: 2px solid #000;
@@ -246,6 +270,54 @@ p{
     align-content: space-around;
 }
 
+/*---------------------- order -------------------*/
+.order .flexContainer {
+    display: flex;
+}
+.order .flexContainer .flexItem:first-child{       
+    order: 3;
+    background: #ce0027;
+}
+.order .flexContainer .flexItem:nth-child(2){
+    order: 2;
+    background: #880956;
+}
+.order .flexContainer .flexItem:last-child{       
+    order: -1;
+    background: #010088;
+}
+
+/*---------------------- order -------------------*/
+.flex-grow .flexContainer {
+    display: flex;
+    width: 100%;
+    margin-right: 0.5rem;
+}
+.flex-grow .flexContainer .flexItem:first-child{       
+    flex-grow: 1;
+    background: #ce0027;
+}
+
+/*---------------------- flex-shrink -------------------*/
+.flex-shrink .flexContainer {
+    display: flex;
+    width: 18rem;    
+}
+.flex-shrink .flexContainer .flexItem:last-child{       
+    flex-shrink: 18;
+    background: #ce0027;
+}
+
+/*---------------------- align-self: -------------------*/
+.align-self .flexContainer {
+    display: flex;
+    height: 6rem;        
+}
+.align-self .flexContainer .flexItem:nth-child(3){       
+    align-self: flex-end;
+    background: #ce0027;
+}
+
 
 /*-------------------------- Elementos filhos (itens) --------------------------*/
 
@@ -269,6 +341,7 @@ p{
 }
 .flexItem:nth-child(5){
     width: 2rem;
+
 }
 .flexItem:nth-child(6){
     width: 2.6rem;
